tests/semantic_analysis/error/structInIf.c
structInIf\.c:3:5: error:.*